adjust doc