@@ -8,4 +8,6 @@
 -XX:ThreadStackSize or -Xss      # JVM 中java_thread 栈大小
 -XX:CompilerThreadStackSize      # compiler_thread的stack_size
 -XX:VMThreadStackSize            # vm内部的线程比如gc线程等
+-XX:+PrintGCDetails              # 打印GC日志
+-XX:+PrintGCTimeStamps           # 打印GC时间戳
 ```
